package edu.fiuba.algo3.modelo;

public interface Multiplicador {
    Integer multiplicar(int puntos);
}
