package edu.fiuba.algo3.modelo;

public class Uniplicador implements Multiplicador {
    public Integer multiplicar(int puntos) {
        return puntos;
    }
}
